about us, sources, leadership

--- a/index.html
+++ b/index.html
@@ -11,6 +11,151 @@
     <title></title>
   </head>
   <body>
-    <img src="images/Under_construction.jpeg" alt="">
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="images/place_holder_navbar_picture.png" alt="First slide">
+    </div>
+  </div>
+</div>
+<!--- three compartment --->
+<div class="container">
+<div class="row">
+  <div class="col-sm">
+    <div class="d-flex justify-content-center">
+        <img class="top_icon users" src="images/users-solid.svg" alt="">
+    </div>
+    <div class="d-flex justify-content-center">
+      <h4>Title for who we are will go here</h4>
+    </div>
+
+      <div class="d-flex justify-content-center">
+      <p>blah blah blah</p>
+    </div>
+      <div class="d-flex justify-content-center">
+        <button class ='buttons' type="button" name="button">
+          Learn More
+        </button>
+      </div>
+</div>
+  <div class="col-sm">
+    <div class="d-flex justify-content-center">
+        <img class="top_icon micro" src="images/microchip-solid.svg" alt="">
+    </div>
+    <div class="d-flex justify-content-center">
+      <h4>Title for our services will go here</h4>
+    </div>
+
+      <div class="d-flex justify-content-center">
+      <p>We build websites</p>
+    </div>
+    <div class="d-flex justify-content-center">
+      <button class ='buttons' type="button" name="button">
+          Learn More
+      </button>
+    </div>
+
+  </div>
+  <div class="col-sm">
+    <div class="d-flex justify-content-center">
+        <img class="top_icon rotate" src="images/arrow-rotate-right-solid.svg" alt="">
+    </div>
+    <div class="d-flex justify-content-center">
+      <h4>Title for our process will go here</h4>
+    </div>
+
+      <div class="d-flex justify-content-center">
+      <p>blah blah blah</p>
+    </div>
+    <div class="d-flex justify-content-center">
+      <button class ='buttons' type="button" name="button">
+          Learn More
+      </button>
+    </div>
+  </div>
+</div>
+</div>
+
+<!--- two compartment --->
+  <div class="AboutUs">
+  <div class="row">
+    <div class="col-sm">
+      <div class="d-flex justify-content-center">
+        <img class='imgabout' src="images/place_holder_about_us_picture.png" alt="">
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="d-flex justify-content-center">
+          <h1 class='abouttxt'>- About Us -</h1>
+      </div>
+      <div class="d-flex justify-content-center">
+        <p>blah blah blah</p>
+      </div>
+    </div>
+</div>
+<!--- Leadership Board --->
+<div class="LeadershipTeam">
+  <div class="d-flex justify-content-center">
+     <h1 class='leader'>- Leadership Team -</h1>
+   </div>
+  <div class="row">
+    <div class="col-sm">
+      <div class="d-flex justify-content-center">
+        <div class="pics1">
+          <img class='pics' src="images/noah_place_holder_picture.png" alt="">
+          <div class="noah w-100">
+            <p class='noahbox'>Noah Cheshier</p>
+            <p class='noahbox2'>President</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm">
+      <div class="d-flex justify-content-center">
+        <div class="pics1">
+            <img class='pics' src="images/kyle_place_holder_picture.png" alt="">
+            <div class="noah w-100">
+              <p class='noahbox'>Kyle Hong </p>
+              <p class='noahbox2'>Vice President</p>
+            </div>
+          </div>
+      </div>
+  </div>
+    <div class="col-sm">
+      <div class="d-flex justify-content-center">
+        <div class="pics1">
+          <img class='pics' src='images/matt_place_holder_picture.png' alt="">
+          <div class="noah w-100">
+            <p class='noahbox'>Matt Hurt </p>
+            <p class='noahbox2'>CISO</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!---Services--->
+<div class="service1">
+<div class="row">
+  <div class="col-sm">
+    <div class="d-flex justify-content-center">
+        <h1 class='services'>- Services -</h1>
+    </div>
+    <div class="d-flex justify-content-center">
+      <p>blah blah blah</p>
+    </div>
+  </div>
+  <div class="col-sm">
+    <div class="d-flex justify-content-center">
+      <img class='imgabout' src="images/place_holder_services_picture.png" alt="">
+    </div>
+  </div>
+
+</div>
+
+
+
   </body>
 </html>
