--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
     <title></title>
   </head>
   <body>
-
+  <section id="header">
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand logo" href="#">
+          <img id="logo" src="images/logo_2_text.png" alt="">
+          </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class=" justify-content-end collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link h4" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link h4" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link h4" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link h4" href="#">Process</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link h4" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </section>
+  <div class="jumbotron"></div>
   </body>
 </html>
