--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
   <section id="header">
-    <nav class="navbar navbar-expand-lg fixed-top bg-dark" style="--bs-bg-opacity: .2;">
+    <nav class="navbar navbar-expand-lg fixed-top bg-dark" style="--bs-bg-opacity: .1;">
       <div class=" container-fluid">
         <a class="navbar-brand logo" href="#">
           <img id="logo" src="images/logo_2_text.png" alt="">
@@ -46,5 +46,69 @@
     </nav>
   </section>
   <div class="jumbotron"></div>
+
+  <!-- ########## KYLES SECTION WILL GO HERE ########## -->
+
+
+
+  <!-- ########## END OF KYLES SECTION ##########-->
+
+  <!-- ########## START OF PROCESSES SECTION ########## -->
+
+    <section id="processes">
+      <div class="container">
+        <div class="row">
+          <h1 class="d-flex justify-content-center">— Our Processes —</h1>
+          <div class="d-flex justify-content-center col-md-12 process_img">
+            <img src="images/processes_img.png" alt="">
+          </div>
+        </div>
+        <div class="d-flex justify-content-center step_content row">
+          <div class="col-md-3">
+            <p><b>Step1:</b> It is a long established fact that
+               a reader will be distracted by the readable
+               content of a page when looking at its layout.
+               The point of using Lorem Ipsum is that it has
+               a more-or-less normal distribution of letters,
+               as opposed to using 'Content here, content here’. </p>
+          </div>
+          <div class="col-md-3">
+            <p><b>Step2:</b> It is a long established fact that
+               a reader will be distracted by the readable
+               content of a page when looking at its layout.
+               The point of using Lorem Ipsum is that it has
+               a more-or-less normal distribution of letters,
+               as opposed to using 'Content here, content here’. </p>
+          </div>
+          <div class="col-md-3">
+            <p><b>Step3:</b> It is a long established fact that
+               a reader will be distracted by the readable
+               content of a page when looking at its layout.
+               The point of using Lorem Ipsum is that it has
+               a more-or-less normal distribution of letters,
+               as opposed to using 'Content here, content here’. </p>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center step_content row">
+          <div class="col-md-3">
+            <p><b>Step4:</b> It is a long established fact that
+               a reader will be distracted by the readable
+               content of a page when looking at its layout.
+               The point of using Lorem Ipsum is that it has
+               a more-or-less normal distribution of letters,
+               as opposed to using 'Content here, content here’. </p>
+          </div>
+          <div class="col-md-3">
+            <p><b>Step5:</b> It is a long established fact that
+               a reader will be distracted by the readable
+               content of a page when looking at its layout.
+               The point of using Lorem Ipsum is that it has
+               a more-or-less normal distribution of letters,
+               as opposed to using 'Content here, content here’. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  <!-- ########## END OF PROCESSES SECTION ########## -->
   </body>
 </html>
