--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
     </div>
 
       <div class="d-flex justify-content-center">
-      <p>blah blah blah</p>
+      <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
     </div>
       <div class="d-flex justify-content-center">
+        <a href="#aboutSection">
         <button class ='buttons' type="button" name="button">
           Learn More
         </button>
+      </a>
       </div>
 </div>
   <div class="col-sm">
@@ -48,12 +50,14 @@
     </div>
 
       <div class="d-flex justify-content-center">
-      <p>We build websites</p>
+      <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
     </div>
     <div class="d-flex justify-content-center">
+      <a href="#serviceSection">
       <button class ='buttons' type="button" name="button">
-          Learn More
+          Our Services
       </button>
+    </a>
     </div>
 
   </div>
@@ -66,11 +70,11 @@
     </div>
 
       <div class="d-flex justify-content-center">
-      <p>blah blah blah</p>
+      <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
     </div>
     <div class="d-flex justify-content-center">
       <button class ='buttons' type="button" name="button">
-          Learn More
+          Processes We Take
       </button>
     </div>
   </div>
@@ -87,11 +91,17 @@
     </div>
     <div class="col-sm">
       <div class="d-flex justify-content-center">
-          <h1 class='abouttxt'>- About Us -</h1>
+          <h1 id=aboutSection class='abouttxt'>- About Us -</h1>
       </div>
       <div class="d-flex justify-content-center">
-        <p>blah blah blah</p>
-      </div>
+        <div class="aboutustxt">
+          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). <br><br>
+
+          The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.<br><br>
+
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          </div>
+        </div>
     </div>
 </div>
 <!--- Leadership Board --->
@@ -99,41 +109,44 @@
   <div class="d-flex justify-content-center">
      <h1 class='leader'>- Leadership Team -</h1>
    </div>
-  <div class="row">
-    <div class="col-sm">
-      <div class="d-flex justify-content-center">
-        <div class="pics1">
-          <img class='pics' src="images/noah_place_holder_picture.png" alt="">
-          <div class="noah w-100">
-            <p class='noahbox'>Noah Cheshier</p>
-            <p class='noahbox2'>President</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm">
-      <div class="d-flex justify-content-center">
-        <div class="pics1">
-            <img class='pics' src="images/kyle_place_holder_picture.png" alt="">
-            <div class="noah w-100">
-              <p class='noahbox'>Kyle Hong </p>
-              <p class='noahbox2'>Vice President</p>
-            </div>
-          </div>
-      </div>
-  </div>
-    <div class="col-sm">
-      <div class="d-flex justify-content-center">
-        <div class="pics1">
-          <img class='pics' src='images/matt_place_holder_picture.png' alt="">
-          <div class="noah w-100">
-            <p class='noahbox'>Matt Hurt </p>
-            <p class='noahbox2'>CISO</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+   <div class="container1">
+     <div class="row justify-content-center">
+       <div class="col-md-4">
+         <div class="d-flex justify-content-center">
+           <div class="pics1">
+             <img class='pics' src="images/noah_place_holder_picture.png" alt="">
+             <div class="noah w-100">
+               <p class='noahbox'>Noah Cheshier</p>
+               <p class='noahbox2'>President</p>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="picture_margin col-md-4">
+         <div class="d-flex justify-content-center">
+           <div class="pics1">
+               <img class='pics' src="images/kyle_place_holder_picture.png" alt="">
+               <div class="noah w-100">
+                 <p class='noahbox'>Kyle Hong </p>
+                 <p class='noahbox2'>Vice President</p>
+               </div>
+             </div>
+         </div>
+     </div>
+       <div class="picture_margin col-md-4">
+         <div class="d-flex justify-content-center">
+           <div class="pics1">
+             <img class='pics' src='images/matt_place_holder_picture.png' alt="">
+             <div class="noah w-100">
+               <p class='noahbox'>Matt Hurt </p>
+               <p class='noahbox2'>CISO</p>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+
 </div>
 
 <!---Services--->
@@ -141,14 +154,15 @@
 <div class="row">
   <div class="col-sm">
     <div class="d-flex justify-content-center">
-        <h1 class='services'>- Services -</h1>
+        <h1 id=serviceSection class='services'>- Services -</h1>
     </div>
-    <div class="d-flex justify-content-center">
-      <p>blah blah blah</p>
+    <div class="paragraph">
+      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+</p>
     </div>
   </div>
   <div class="col-sm">
-    <div class="d-flex justify-content-center">
+    <div class="servicesPicture">
       <img class='imgabout' src="images/place_holder_services_picture.png" alt="">
     </div>
   </div>
