fixed merge conflicts

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="row">
       <div class="col-sm">
         <div class="d-flex justify-content-center">
-          <img class='imgabout' src="images/place_holder_about_us_picture.png" alt="">
+          <img class='imgabout imgradius' src="images/about_us.jpg" alt="">
         </div>
       </div>
       <div class="col-sm">
@@ -191,11 +191,13 @@
       <div class="paragraph">
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
   </p>
+  <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+</p>
       </div>
     </div>
     <div class="col-sm">
       <div class="servicesPicture">
-        <img class='imgabout' src="images/place_holder_services_picture.png" alt="">
+        <img class='imgabout imgradius' src="images/services_section.jpg" alt="">
       </div>
     </div>
 
