--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
           <img class="top_icon users" src="images/users-solid.svg" alt="">
       </div>
       <div class="d-flex justify-content-center">
-        <h4>Title for who we are will go here</h4>
+        <h4>Who We Are</h4>
       </div>
 
-        <div class="d-flex justify-content-center">
-        <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <div class="d-flex justify-content-center text-center">
+        <p>A small software development company based in Cheyenne, WY </p>
       </div>
         <div class="d-flex justify-content-center">
           <a href="#aboutSection">
@@ -76,11 +76,12 @@
           <img class="top_icon micro" src="images/microchip-solid.svg" alt="">
       </div>
       <div class="d-flex justify-content-center">
-        <h4>Title for our services will go here</h4>
+        <h4>What We Provide</h4>
       </div>
 
-        <div class="d-flex justify-content-center">
-        <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <div class="d-flex justify-content-center text-center">
+        <p>Website design, optimization, and overall face lift. Improved online
+          presence for your company. Unique projects specific to your needs.</p>
       </div>
       <div class="d-flex justify-content-center">
         <a href="#serviceSection">
@@ -96,16 +97,16 @@
           <img class="top_icon rotate" src="images/arrow-rotate-right-solid.svg" alt="">
       </div>
       <div class="d-flex justify-content-center">
-        <h4>Title for our process will go here</h4>
+        <h4>Our 5 Step Process</h4>
       </div>
 
-        <div class="d-flex justify-content-center">
-        <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <div class="d-flex justify-content-center text-center">
+        <p>Consultation, Prototyping, Feedback, Edit and Optimize, and Delivery</p>
       </div>
       <div class="d-flex justify-content-center">
         <a href="#processes">
           <button class ='buttons' type="button" name="button">
-              Processes We Take
+              Our Process
           </button>
         </a>
       </div>
@@ -218,46 +219,35 @@
         </div>
         <div class="d-flex justify-content-center step_content row">
           <div class="col-md-3">
-            <p><b>Step1:</b> It is a long established fact that
-               a reader will be distracted by the readable
-               content of a page when looking at its layout.
-               The point of using Lorem Ipsum is that it has
-               a more-or-less normal distribution of letters,
-               as opposed to using 'Content here, content here’. </p>
+            <p><b>Step 1:</b> Consultation. In our initial meeting, we will
+              discuss overall project details and go into depth about
+              functionality and appearance. This is where we will discuss
+              the cost and timeline of each part of the project.</p>
           </div>
           <div class="col-md-3">
-            <p><b>Step2:</b> It is a long established fact that
-               a reader will be distracted by the readable
-               content of a page when looking at its layout.
-               The point of using Lorem Ipsum is that it has
-               a more-or-less normal distribution of letters,
-               as opposed to using 'Content here, content here’. </p>
+            <p><b>Step 2:</b> Prototyping. Following the notes from Step 1, we
+              will create a sample of your project by the agreed upon time.
+              This prototype will include the functionality and general layout
+              that was requested.</p>
           </div>
           <div class="col-md-3">
-            <p><b>Step3:</b> It is a long established fact that
-               a reader will be distracted by the readable
-               content of a page when looking at its layout.
-               The point of using Lorem Ipsum is that it has
-               a more-or-less normal distribution of letters,
-               as opposed to using 'Content here, content here’. </p>
+            <p><b>Step 3:</b> Feedback. We present our sample to you and take
+             note of any changes you'd like to see. Tell us everything you want
+             changed and we'll narrow down exactly what we can do for you.</p>
           </div>
         </div>
         <div class="d-flex justify-content-center step_content row">
           <div class="col-md-3">
-            <p><b>Step4:</b> It is a long established fact that
-               a reader will be distracted by the readable
-               content of a page when looking at its layout.
-               The point of using Lorem Ipsum is that it has
-               a more-or-less normal distribution of letters,
-               as opposed to using 'Content here, content here’. </p>
+            <p><b>Step 4:</b> Edit and Optimize. We take the notes from all our
+             meetings and polish up the project to reflect your vision.
+             Customer satisfaction is a top priority so will work diligently to
+             produce a high end product.</p>
           </div>
           <div class="col-md-3">
-            <p><b>Step5:</b> It is a long established fact that
-               a reader will be distracted by the readable
-               content of a page when looking at its layout.
-               The point of using Lorem Ipsum is that it has
-               a more-or-less normal distribution of letters,
-               as opposed to using 'Content here, content here’. </p>
+            <p><b>Step 5:</b> Delivery and Payment. Once we can deliver a product
+             that matches or exceeds your expectations, we will deliver the
+             project back to you in the agreed amount of time. This will include
+             a thorough explanation of all aspects of your project</p>
           </div>
         </div>
       </div>
