--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
         <div class="d-flex justify-content-center">
           <a href="#aboutSection">
-          <button class ='buttons' type="button" name="button">
+          <button class ='btn buttons lmbtn' type="button" name="button">
             Learn More
           </button>
         </a>
@@ -84,7 +84,7 @@
       </div>
       <div class="d-flex justify-content-center">
         <a href="#serviceSection">
-        <button class ='buttons' type="button" name="button">
+        <button class ='btn buttons osbtn' type="button" name="button">
             Our Services
         </button>
       </a>
@@ -104,7 +104,7 @@
       </div>
       <div class="d-flex justify-content-center">
         <a href="#processes">
-          <button class ='buttons' type="button" name="button">
+          <button class ='btn buttons probtn' type="button" name="button">
               Processes We Take
           </button>
         </a>
