about us Script

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
 
         <div class="d-flex justify-content-center text-center">
-        <p>Consultation, Prototyping, Feedback, Edit and Optimize, and Delivery</p>
+        <p>Consultation, Prototype, Feedback, Edit and Optimize, and Delivery</p>
       </div>
       <div class="d-flex justify-content-center">
         <a href="#processes">
@@ -128,11 +128,25 @@
         </div>
         <div class="d-flex justify-content-center">
           <div class="aboutustxt">
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). <br><br>
-
-            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.<br><br>
-
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>We are a small group of Wyoming natives looking to improve
+             small businesses in all communities by optimizing their online
+             presence. We believe that many communities are going through an
+             increase in size right now and the dynamic of the town will change
+             accordingly. Franchises will find these communities, which can
+             create problematic competition for small business owners. We want
+             to contribute in helping small businesses keep up to date and able
+             to compete with these franchises. Online presence is an important
+             avenue of exposure today and we want to level the playing field
+             by updating our communities’ websites and their functionality
+             with this ever-changing, technology based marketplace. <br>The size of
+             our company is small, but this brings dedication to customer
+             satisfaction and keeps things at a personal level. We value every
+             client that we do business with and that appreciation will be
+             apparent from the beginning. There is always a steady flow of
+             communication between us as a team and you can expect us to
+             reiterate those conversations back to you. We promise to keep your
+             best interest in mind. Send us an email and we can get to know each
+             other more!</p>
             </div>
           </div>
       </div>
@@ -225,7 +239,7 @@
               the cost and timeline of each part of the project.</p>
           </div>
           <div class="col-md-3">
-            <p><b>Step 2:</b> Prototyping. Following the notes from Step 1, we
+            <p><b>Step 2:</b> Prototype. Following the notes from Step 1, we
               will create a sample of your project by the agreed upon time.
               This prototype will include the functionality and general layout
               that was requested.</p>
