--- a/index.html
+++ b/index.html
@@ -113,9 +113,11 @@
     </div>
   </div>
   </div>
+  <div id=aboutSection>
 
+  </div>
   <!--- two compartment --->
-    <div class="AboutUs">
+    <div class="AboutUs" >
     <div class="row">
       <div class="col-sm">
         <div class="d-flex justify-content-center">
@@ -124,7 +126,7 @@
       </div>
       <div class="col-sm">
         <div class="d-flex justify-content-center">
-            <h1 id=aboutSection class='abouttxt'>- About Us -</h1>
+            <h1  class='abouttxt'>- About Us -</h1>
         </div>
         <div class="d-flex justify-content-center">
           <div class="aboutustxt">
@@ -195,13 +197,15 @@
      </div>
 
   </div>
+  <div id="serviceSection">
 
+  </div>
   <!---Services--->
   <div class="service1">
   <div class="row">
     <div class="col-sm">
       <div class="d-flex justify-content-center">
-          <h1 id=serviceSection class='services'>- Services -</h1>
+          <h1  class='services'>- Services -</h1>
       </div>
       <div class="paragraph">
         <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
