--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <title>SudoByte Solutions - Software Development - Branding - Web Development - Cheyenne, WY</title>
+    <meta name="description" content="Software Development Company">
+    <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
+    <meta name="SudoByte Solutions" content="SudoByte Solutions">
+    <meta property="og:url" content="https://sudobyte.com/">
+    <meta property="og:site_name" content="SudoByte Solutions">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/main.css" rel="stylesheet">
