--- a/index.html
+++ b/index.html
@@ -219,19 +219,20 @@
         providing systems that make businesses more efficient,
         effective, and cost aware.</p>
 
-        <p>solutions include, branding and website face lifts bringing
+        <p>Solutions include branding and website face lifts, bringing
         businesses a cleaner more modern look, system software needs
         such as, licensing renewal, inventory management, order processing
         and much more.</p>
 
         <p>Offering a maintence program so you never have to worry about
-        issues and errors with in your website or system. Based of a monthly
-        subscription in order to provide the best services possible keeping
-        businesses websites up and businesses systems strong.</p>
+        issues and errors with your website or system. This is based off a monthly
+        subscription in order to provide the best services possible, keeping
+        websites up and business systems strong.</p>
 
         <p>Our goals is to provide our clients with the best solutions, creating
-        strong relationship and smiling faces. Making our clients website, branding,
-        and system needs our responsibilty so they can focus on running their business.</p>
+        strong relationships and smiling faces. Making our clients website, branding,
+        and system needs can be our responsibilty so they can focus on running
+        their business.</p>
       </div>
     </div>
     <div class="col-sm">
@@ -250,7 +251,7 @@
     <section id="processes">
       <div class="container">
         <div class="row">
-          <h1 class="section_headers d-flex justify-content-center">— Our Processes —</h1>
+          <h1 class="section_headers d-flex justify-content-center">— Our Process —</h1>
           <div class="d-flex justify-content-center col-md-12 process_img">
             <img src="images/processes_img.png" alt="">
           </div>
