--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
          <div class="col-md-4">
            <div class="d-flex justify-content-center">
              <div class="pics1">
-               <img class='pics' src="images/noah_place_holder_picture.png" alt="">
+               <img class='pics' src="images/noah_picture.jpeg" alt="">
                <div class="noah w-100">
                  <p class='noahbox'>Noah Cheshier</p>
                  <p class='noahbox2'>President</p>
@@ -181,7 +181,7 @@
          <div class="picture_margin col-md-4">
            <div class="d-flex justify-content-center">
              <div class="pics1">
-                 <img class='pics' src="images/kyle_place_holder_picture.png" alt="">
+                 <img class='pics' src="images/kyle_picture.jpeg" alt="">
                  <div class="noah w-100">
                    <p class='noahbox'>Kyle Hong </p>
                    <p class='noahbox2'>Vice President</p>
@@ -192,7 +192,7 @@
          <div class="picture_margin col-md-4">
            <div class="d-flex justify-content-center">
              <div class="pics1">
-               <img class='pics' src='images/matt_place_holder_picture.png' alt="">
+               <img class='pics' src='images/matt_picture.jpeg' alt="">
                <div class="noah w-100">
                  <p class='noahbox'>Matt Hurt </p>
                  <p class='noahbox2'>CISO</p>
