--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <title>SudoByte Solutions - Software Development - Branding - Web Development - Cheyenne, WY</title>
     <meta name="description" content="Software Development Company">
     <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
