--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
-    <title>SudoByte Solutions - Software Development - Branding - Web Development - Cheyenne, WY</title>
+    <title>SudoByte Solutions - Software Development company out of Cheyenne, WY</title>
     <meta name="description" content="Software Development Company">
     <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
     <meta name="SudoByte Solutions" content="SudoByte Solutions">
