adjusted services picture

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </div>
     </div>
     <div class="col-sm">
-      <div class="servicesPicture">
+      <div class="d-flex justify-content-center">
         <img class='imgabout imgradius' src="images/services_section.jpg" alt="">
       </div>
     </div>
@@ -255,8 +255,10 @@
         <div class="row">
           <h1 class="section_headers d-flex justify-content-center">— Our Process —</h1>
           <div class="d-flex justify-content-center col-md-12 process_img">
+            <div class="dflex justify-content-center">
             <img src="images/processes_img.png" alt="">
           </div>
+        </div>
         </div>
         <div class="d-flex justify-content-center step_content row">
           <div class="col-md-3">
