--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <title>SudoByte Solutions - Software Development company out of Cheyenne, WY</title>
-    <meta name="description" content="Software Development Company">
+    <meta name="description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
+    creating beautiful layouts, software designs, and branding, fulfilling every need our clients have.">
     <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
     <meta name="SudoByte Solutions" content="SudoByte Solutions">
     <meta property="og:url" content="https://sudobyte.com/">
@@ -29,9 +30,9 @@
         <a class="navbar-brand logo" href="#">
           <img id="head_logo" src="images/logo_2_text.png" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-solid fa-bars"></i>
-        </button>
+        </button> -->
         <div class=" justify-content-end collapse navbar-collapse" id="navbarToggleExternalContent">
           <ul class="navbar-nav">
             <li class="nav-item">
