--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     creating beautiful layouts, software designs, and branding, fulfilling every need our clients have.">
     <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
     <meta name="SudoByte Solutions" content="SudoByte Solutions">
+    <meta property="og:description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
+    creating beautiful layouts, software designs, and branding, fulfilling every need our clients have.">
     <meta property="og:url" content="https://sudobyte.com/">
     <meta property="og:site_name" content="SudoByte Solutions">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
