--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <img id="foot_logo"src="images/logo_2_text.png" alt="">
         </div>
           <div class="d-flex justify-content-end">
-            <p>©2022 SudoByte Software. All rights reserved.</p>
+            <p>©2022 SudoByte Solutions. All rights reserved.</p>
           </div>
       </div>
     </section>
