--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
      </div>
      <div class="container1">
        <div class="row justify-content-center">
-         <div class="col-md-4">
+         <div class="picture_margin col-md-4">
            <div class="d-flex justify-content-center">
              <div class="pics1">
                <img class='pics' src="images/noah_picture.jpeg" alt="">
