fixed broke nav link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link h4" href="#serviceSection">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link h4" href="#processes">Process</a>
+              <a class="nav-link h4" href="#process">Process</a>
             </li>
             <li class="nav-item">
               <a class="nav-link h4" href="#contact">Contact</a>
