fixed process button

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p>Consultation, Prototype, Feedback, Edit and Optimize, and Delivery</p>
       </div>
       <div class="d-flex justify-content-center">
-        <a href="#processes">
+        <a href="#process">
           <button class ='btn buttons btn-lg probtn' type="button" name="button">
               Our Process
           </button>
