--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SudoByte Solutions - Software Development company out of Cheyenne, WY</title>
     <meta name="description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
     creating beautiful layouts, software designs, and branding, fulfilling every need our clients have.">
-    <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
+    <meta name="keywords" content="software development, web development, sudobyte, sudobyte solutions, graphic design, software development company, website, website developers, system software">
     <meta name="SudoByte Solutions" content="SudoByte Solutions">
     <meta property="og:description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
     creating beautiful layouts, software designs, and branding, fulfilling every need our clients have.">
@@ -27,7 +27,7 @@
   </head>
   <body>
   <section id="header">
-    <nav class="navbar navbar-expand-lg fixed-top bg-dark" style="--bs-bg-opacity: .1;">
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class=" container-fluid">
         <a class="navbar-brand logo" href="#">
           <img id="head_logo" src="images/logo_2_text.png" alt="">
@@ -238,7 +238,7 @@
     </div>
     <div class="col-sm">
       <div class="d-flex justify-content-center">
-        <img class='imgabout imgradius' src="images/services_section.jpg" alt="">
+        <img class='imgabout imgradius' src="images/services_section.jpeg" alt="">
       </div>
     </div>
 
@@ -301,7 +301,7 @@
     <section id="contact">
       <div class="container">
         <div class="row justify-content-center">
-          <button type="button" class="btn col-md-4 btn-lg" name="Contact Now"><a href="mailto:sudobytesolutions@sudobye.com? subject=Project Inquary">Contact Now</a></button>
+          <button type="button" class="btn col-md-4 btn-lg" name="Contact Now"><a href="mailto:sudobytesolutions@sudobyte.com? subject=Project Inquary">Contact Now</a></button>
         </div>
       </div>
         <!-- <form class="" action="contact_form.php" method="post">
