--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </div>
     <div class="col-sm">
       <div class="d-flex justify-content-center">
-        <img class='imgabout imgradius' src="images/services_section.jpeg" alt="">
+        <img class='imgabout imgradius' src="images/services_section.jpg" alt="">
       </div>
     </div>
 
