added number and email as plain text

--- a/index.html
+++ b/index.html
@@ -313,6 +313,12 @@
         <div class="row justify-content-center">
           <button type="button" class="btn col-md-4 btn-lg" name="Contact Now"><a href="mailto:sudobytesolutions@sudobyte.com? subject=Project Inquary">Contact Now</a></button>
         </div>
+        <div class="row justify-content-center text-center p-2">
+          <h4 class="text-align-center">sudobytesolutions@sudobyte.com</h4>
+        </div>
+        <div class="row justify-content-center text-center">
+          <h4 class="text-align-center">307. 222. 9561</h4>
+        </div>
       </div>
         <!-- <form class="" action="contact_form.php" method="post">
         <div class="row">
